# urlstd

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini  user-guide.html
.github/workflows/: coverage.yml  main.yml
_sources/: index.rst.txt  user-guide.rst.txt
_sources/reference/: urlstd.error.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
docs/_sources/: index.rst.txt  user-guide.rst.txt
docs/_sources/reference/: index.rst.txt  urlstd.parse.rst.txt
docs/_static/: copybutton.js  documentation_options.js
docs/reference/: index.html  urlstd.error.html  urlstd.parse.html
docs/source/: conf.py  index.rst  user-guide.rst
docs/source/_templates/autosummary/: class.rst
docs/source/reference/: index.rst  urlstd.error.rst  urlstd.parse.rst
reference/: index.html  urlstd.error.html  urlstd.parse.html
src/urlstd/: __init__.py  error.py  parse.py
tests/: test_api.py
tests/wpt/: __init__.py  conftest.py  report.html  test_failure.py  test_idna_test_v2.py  test_toascii.py  test_url_constructor.py  test_url_origin.py  test_url_searchparams.py  test_url_setters.py  test_url_statics_canparse.py  test_urlencoded_parser.py  test_urlsearchparams_append.py  test_urlsearchparams_constructor.py  test_urlsearchparams_delete.py  test_urlsearchparams_get.py  test_urlsearchparams_getall.py  test_urlsearchparams_has.py  test_urlsearchparams_set.py  test_urlsearchparams_sort.py  test_urlsearchparams_stringifier.py
