[tool.poetry]
name = "urlstd"
version = "2021.10.25.post2"
description = "Python implementation of the WHATWG URL Standard"
license = "MIT"
authors = ["Tetsuya Miura <miute.dev@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/miute/urlstd"
documentation = "https://miute.github.io/urlstd/"
keywords = ["url", "url-standard", "url-parser", "url-parsing"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
]
include = [
  { path = "CHANGELOG.md", format = "sdist" },
  { path = "tests/**/*.py", format = "sdist" },
  { path = "tests/**/*.json", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
icupy = ">=0.11.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pytest-html = "^3.2.0"
pytest-mock = "^3.10.0"
coverage = { extras = ["toml"], version = "^6.5.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--tb=native -ra"
log_format = "%(asctime)s|%(levelname)s|%(name)s.%(funcName)s|%(message)s"
log_date_format = "%H:%M:%S"
testpaths = ["tests"]

[tool.coverage.run]
source = ["urlstd"]
omit = ["tests/*/conftest.py"]

[tool.coverage.paths]
source = ["src/urlstd", "*/urlstd"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise NotImplementedError",
  "@dataclass",
  "@overload",
]

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "icupy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "py.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true
